--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -12,6 +12,9 @@
             fill="#ff269e" />
     </svg>
 </a>
-<article class="mt-4 bg-white dark:bg-gray-900 p-8 shadow-xl rounded-2xl max-w-xl prose prose-slate dark:prose-invert">
+<article class="max-w-xl p-8 mt-4 prose bg-white shadow-xl dark:bg-gray-900 rounded-2xl prose-slate dark:prose-invert">
     {{ content | widont }}
 </article>
+{{ assets_field }}
+    <img src="{{ url }}">
+{{ /assets_field }}
